# sponge

./: Cargo.toml  rustfmt.toml
keccak/: Cargo.toml
keccak/src/: encode.rs  k12.rs  keccakp.rs  lib.rs  sha3.rs
keccak/tests/it/: k12.rs  kat.rs  keccakf.rs  main.rs  sha3.rs
sponge/: Cargo.toml
sponge/src/: cyclist.rs  lib.rs  sponge.rs  state.rs  suffix.rs
supply-chain/: audits.toml  config.toml
xoodoo/: .gitignore  Cargo.toml
xoodoo/src/: lib.rs  xoodoo.rs
xoodoo/tests/it/: hex.rs  kat.rs  main.rs  xoodyak.rs
