[package]
name = "keccak"
version = "0.1.0"
authors = ["Steve <steve@307703.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
zeroize = ["sponge/zeroize", "dep:zeroize"]

[dependencies]
sponge = { path = "../sponge" }
zeroize = { version = "1", optional = true }