[package]
name = "keccak"
version = "0.1.0"
authors = ["Steve <steve@307703.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
digest = ["sponge/digest", "dep:digest"]
zeroize = ["sponge/zeroize", "dep:zeroize"]

[dependencies]
digest = { version = "0.10", optional = true }
sponge = { path = "../sponge" }
zeroize = { version = "1", optional = true }