[package]
name = "sponge"
version = "0.1.0"
authors = ["Steve <steve@307703.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
alloc = []
rand = ["dep:rand_core"]
zeroize = ["dep:zeroize"]

[dependencies]
rand_core = { version = "0.6", optional = true }
zeroize = { version = "1", optional = true }
